// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCard renders the character 1`] = `
<span
  className="container"
>
  <span
    className="character"
  >
    对
  </span>
</span>
`;

exports[`CharacterCard renders the definition 1`] = `
<span
  className="container showDefinition"
>
  <span
    className="pinyin"
  >
    duì
  </span>
  <span
    className="definition"
  >
    right / correct
  </span>
</span>
`;

exports[`CharacterCard renders the fallback definition 1`] = `
<span
  className="container showDefinition"
>
  <span
    className="pinyin"
  >
    duì
  </span>
  <span
    className="definition"
  >
    (No definition available)
  </span>
</span>
`;
